# Stylus-Hardware-Anchor

./: .env.example  .gitignore  BENCHMARKS.md  CONTRIBUTING.md  LICENSE  PRIVACY.md  README.md  ROADMAP.md  SECURITY.md  SETUP_GUIDE.md  authorize_hardware.py  requirements-dev.txt  test_contract.py  ver_schema.md
.cargo/: config.toml
.github/workflows/: ci.yml
anchor_brain/: main.py
docs/: ARCHITECTURE.md  CAST_CHEATSHEET.md  CHANGELOG_SHA_KECCAK_FIXES.md  DEPLOYMENT_GUIDE.md  MILESTONE_1.md  TECHNICAL_CHALLENGES.md
docs/zkp/: README.md  main_branch_diff.md
middleware/: nexus_middleware.py
ohr_firmware/: CMakeLists.txt  platformio.ini
ohr_firmware/main/: CMakeLists.txt
ohr_firmware/src/: main.cpp
scripts/: benchmark_receipts.py  run_gas_benchmarks.py
stylus_anchor/nexus_anchor/: Cargo.toml  Stylus.toml
stylus_anchor/nexus_anchor/src/: main.rs
stylus_anchor/src/: lib.rs
stylus_anchor/stylus_hardware_anchor/: Cargo.toml  SEPOLIA_EVIDENCE.txt  SEPOLIA_EVIDENCE.txt.sha256  Stylus.toml  rust-toolchain.toml
stylus_anchor/stylus_hardware_anchor/src/: lib.rs
